--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ members = [
   "crates/gamacros-controller",
   "crates/gamacrosd",
   "crates/gamacros-profile",
+  "crates/gamacros-bit/derive",
+  "crates/gamacros-bit/mask",
 ]
 resolver = "2"
 
@@ -21,6 +23,8 @@ gamacros-keypress = { path = "crates/gamacros-keypress" }
 gamacros-controller = { path = "crates/gamacros-controller" }
 gamacros-activity = { path = "crates/gamacros-activity" }
 gamacros-profile = { path = "crates/gamacros-profile" }
+gamacros-bit-derive = { path = "crates/gamacros-bit/derive" }
+gamacros-bit-mask = { path = "crates/gamacros-bit/mask" }
 
 tokio = { version = "1", optional = false, features = ["full"] }
 async-recursion = { version = "1.0.2", optional = false }
@@ -52,3 +56,44 @@ cocoa = "0.24.1"
 
 # Dev dependencies
 rand = "0.9.1"
+
+
+[workspace.lints.rust]
+unreachable_pub = "warn"
+unexpected_cfgs = { level = "warn", check-cfg = [
+    "cfg(codspeed)",
+] }
+
+[workspace.lints.clippy]
+pedantic = { level = "warn", priority = -2 }
+# Allowed pedantic lints
+char_lit_as_u8 = "allow"
+collapsible_else_if = "allow"
+collapsible_if = "allow"
+implicit_hasher = "allow"
+map_unwrap_or = "allow"
+match_same_arms = "allow"
+missing_errors_doc = "allow"
+missing_panics_doc = "allow"
+module_name_repetitions = "allow"
+must_use_candidate = "allow"
+similar_names = "allow"
+single_match_else = "allow"
+too_many_lines = "allow"
+needless_raw_string_hashes = "allow"
+# Disallowed restriction lints
+print_stdout = "warn"
+print_stderr = "warn"
+dbg_macro = "warn"
+empty_drop = "warn"
+empty_structs_with_brackets = "warn"
+exit = "warn"
+get_unwrap = "warn"
+rc_buffer = "warn"
+rc_mutex = "warn"
+rest_pat_in_fully_bound_structs = "warn"
+redundant_clone = "warn"
+debug_assert_with_mut_call = "warn"
+unused_peekable = "warn"
+large_stack_arrays = "allow"
+
