--- a/crates/gamacrosd/Cargo.toml
+++ b/crates/gamacrosd/Cargo.toml
@@ -16,7 +16,7 @@ gamacros-keypress = { workspace = true }
 gamacros-profile = { workspace = true }
 gamacros-activity = { workspace = true }
 gamacros-bit-mask = { workspace = true }
-ctrlc = "3.4.5"
-crossbeam-channel = "0.5"
+ctrlc = { workspace = true }
+crossbeam-channel = { workspace = true }
 thiserror = { workspace = true }
-dashmap = "5"
+dashmap = { workspace = true }
