--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ resolver = "2"
 [workspace.package]
 edition = "2021"
 rust-version = "1.80"
-homepage = "https://github.com/mishamyrt/gamacross"
-documentation = "https://github.com/mishamyrt/gamacros"
+homepage = "https://github.com/mishamyrt/gamacros"
+documentation = "https://github.com/mishamyrt/gamacro"
 repository = "https://github.com/mishamyrt/gamacros"
 authors = ["Mikhael Khrustik <misha@myrt.co>"]
 license = "MIT"
@@ -26,20 +26,18 @@ gamacros-profile = { path = "crates/gamacros-profile" }
 gamacros-bit-derive = { path = "crates/gamacros-bit/derive" }
 gamacros-bit-mask = { path = "crates/gamacros-bit/mask" }
 
-tokio = { version = "1", optional = false, features = ["full"] }
-async-recursion = { version = "1.0.2", optional = false }
+ctrlc = "3.4.5"
+crossbeam-channel = "0.5"
+dashmap = "5"
+sdl2 = { version = "0.37", features = ["bundled", "static-link"], optional = false }
+
+syn = { version = "2", features = ["full"] }
+quote = "1"
+proc-macro2 = "1"
+
 thiserror = "2.0.12"
-lru = "0.14.0"
-
-once_cell = "1.21.3"
-
-libc = "0.2.172"
 
 enigo = { version = "0.5.0" }
-image = { version = "0.25.1", default-features = false, features = [
-  "bmp",
-  "jpeg",
-] }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
@@ -56,7 +54,6 @@ cocoa = "0.24.1"
 
 # Dev dependencies
 rand = "0.9.1"
-
 
 [workspace.lints.rust]
 unreachable_pub = "warn"
@@ -96,4 +93,3 @@ redundant_clone = "warn"
 debug_assert_with_mut_call = "warn"
 unused_peekable = "warn"
 large_stack_arrays = "allow"
-
