--- a/crates/gamacros-bit/mask/Cargo.toml
+++ b/crates/gamacros-bit/mask/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "gamacros-bit-mask"
 version = "0.0.0"
-edition = { workspace = true }
 publish = false
-
-[dependencies]
-syn = { version = "2", features = ["full"] }
-quote = "1"
-proc-macro2 = "1"
-
-
+authors = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
+homepage = { workspace = true }
+documentation = { workspace = true }
+repository = { workspace = true }
+license = { workspace = true }
