--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -8,7 +8,7 @@ jobs:
     name: Tests
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
