--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,15 +45,13 @@ serde_yaml = "0.9.34+deprecated"
 serde_derive = "1.0.219"
 plist = "1.7.1"
 
+chrono = "0.4.30"
 log = "0.4.26"
 colored = "3.0.0"
 fern = "0.6.1"
 
 objc = "0.2.7"
 cocoa = "0.24.1"
-
-# Dev dependencies
-rand = "0.9.1"
 
 [workspace.lints.rust]
 unreachable_pub = "warn"
