--- a/crates/gamacrosd/Cargo.toml
+++ b/crates/gamacrosd/Cargo.toml
@@ -20,3 +20,7 @@ ctrlc = { workspace = true }
 crossbeam-channel = { workspace = true }
 thiserror = { workspace = true }
 dashmap = { workspace = true }
+chrono = { workspace = true }
+log = "0.4.26"
+colored = "3.0.0"
+fern = "0.6.1"
