--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -22,7 +22,7 @@ jobs:
 
   code-style:
     name: Code style check
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
