feat: add support for macOS smooth scrolling

--- a/crates/gamacros-keypress/Cargo.toml
+++ b/crates/gamacros-keypress/Cargo.toml
@@ -11,5 +11,5 @@ repository = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
-enigo = { workspace = true, features = ["serde"] }
+enigo = { workspace = true, features = ["serde", "platform_specific"] }
 serde = { workspace = true, features = ["derive"] }
