--- a/crates/gamacros-control/Cargo.toml
+++ b/crates/gamacros-control/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gamacros-keypress"
+name = "gamacros-control"
 version = "0.0.0"
 publish = false
 authors = { workspace = true }
