--- a/crates/gamacrosd/Cargo.toml
+++ b/crates/gamacrosd/Cargo.toml
@@ -11,8 +11,8 @@ repository = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
-gamacros-controller = { workspace = true }
-gamacros-keypress = { workspace = true }
+gamacros-gamepad = { workspace = true }
+gamacros-control = { workspace = true }
 gamacros-profile = { workspace = true }
 gamacros-activity = { workspace = true }
 gamacros-bit-mask = { workspace = true }
