feat: improve app detection

--- a/crates/gamacros-control/Cargo.toml
+++ b/crates/gamacros-control/Cargo.toml
@@ -13,3 +13,4 @@ license = { workspace = true }
 [dependencies]
 enigo = { workspace = true, features = ["serde", "platform_specific"] }
 serde = { workspace = true, features = ["derive"] }
+smallvec = "1.13"
