--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: llvm-tools-preview
+      - name: Install SDL2 with build dependencies
+        run: brew install sdl2 pkg-config
       - uses: taiki-e/install-action@cargo-llvm-cov
       - uses: taiki-e/install-action@nextest
       - name: Collect coverage data
