--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -3,6 +3,9 @@ name: Quality Assurance
 on:
   push:
 
+env:
+  JUST_VERSION: "1.42.4"
+
 jobs:
   test:
     name: Tests
@@ -11,28 +14,45 @@ jobs:
         os: [macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Rust toolchain
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: llvm-tools-preview
-      - name: Install SDL2 with build dependencies
+
+      - name: Setup Just
+        uses: extractions/setup-just@v3
+        with:
+          just-version: ${{ env.JUST_VERSION }}
+
+      - name: Setup cargo-llvm-cov
+        uses: taiki-e/install-action@cargo-llvm-cov
+
+      - name: Setup nextest
+        uses: taiki-e/install-action@nextest
+
+      - name: Setup SDL2 with build dependencies
         run: brew install sdl2 pkg-config
-      - uses: taiki-e/install-action@cargo-llvm-cov
-      - uses: taiki-e/install-action@nextest
-      - name: Collect coverage data
-        run: |
-          export LIBRARY_PATH="$LIBRARY_PATH:$(brew --prefix)/lib"
-          cargo llvm-cov nextest
+
+      - name: Run tests with coverage
+        run: just test-coverage
 
   code-style:
     name: Code style check
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Rust toolchain
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: rustfmt, clippy
+
       - name: Check formatting
-        run: cargo fmt --all --check
+        run: just check-formatting
+
       - name: Check clippy
-        run: cargo clippy
+        run: just lint
