--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ gamacros-profile = { path = "crates/gamacros-profile" }
 gamacros-bit-derive = { path = "crates/gamacros-bit/derive" }
 gamacros-bit-mask = { path = "crates/gamacros-bit/mask" }
 nsworkspace = "0.2.0"
+lunchctl = "0.1.0"
 
 ctrlc = "3.4.5"
 crossbeam-channel = "0.5"
@@ -44,13 +45,11 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.34+deprecated"
 serde_derive = "1.0.219"
 
+clap = { version = "4.5.38" }
 chrono = "0.4.30"
 log = "0.4.26"
 colored = "3.0.0"
 fern = "0.6.1"
-
-objc = "0.2.7"
-cocoa = "0.24.1"
 
 [workspace.lints.rust]
 unreachable_pub = "warn"
