--- a/crates/gamacrosd/Cargo.toml
+++ b/crates/gamacrosd/Cargo.toml
@@ -22,6 +22,8 @@ thiserror = { workspace = true }
 dashmap = { workspace = true }
 chrono = { workspace = true }
 nsworkspace = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
+lunchctl = { workspace = true }
 log = "0.4.26"
 colored = "3.0.0"
 fern = "0.6.1"
