--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ ctrlc = "3.4.5"
 crossbeam-channel = "0.5"
 dashmap = "5"
 sdl2 = { version = "0.37" }
+ahash = "0.8"
 
 syn = { version = "2", features = ["full"] }
 quote = "1"
