--- a/crates/gamacros-workspace/Cargo.toml
+++ b/crates/gamacros-workspace/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gamacros-profile"
+name = "gamacros-workspace"
 version = "0.0.0"
 publish = false
 authors = { workspace = true }
