--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ log = "0.4.26"
 colored = "3.0.0"
 fern = "0.6.1"
 
+notify-debouncer-mini = "0.7.0"
+
 [workspace.lints.rust]
 unreachable_pub = "warn"
 unexpected_cfgs = { level = "warn", check-cfg = [
