--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,3 +105,7 @@ panic = "abort"
 strip = true
 debug = 0
 incremental = false
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
