--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -11,11 +11,11 @@ cargo-dist-version = "0.30.0"
 ci = "github"
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
-# Path that installers should place binaries in
-install-path = "CARGO_HOME"
-# Whether to install an updater program
-install-updater = false
 # The installers to generate for each app
 installers = []
-# Whether to publish prereleases to package managers
-publish-prereleases = true
+build-command = ["just build"]
+
+[dist.dependencies.homebrew]
+sdl2 = { version = "2.32.8" }
+pkg-config = { version = "0.29.3" }
+just = { version = "1.42.4" }
