--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -14,6 +14,10 @@ targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
 # The installers to generate for each app
 installers = []
 build-command = ["just build"]
+github-build-setup = "../build-setup.yaml"
+
+[dist.github-custom-runners]
+aarch64-apple-darwin = "macos-14"
 
 [dist.dependencies.homebrew]
 sdl2 = { version = "2.32.8" }
