refactor: fully migrate to ahash

--- a/crates/gamacros-gamepad/Cargo.toml
+++ b/crates/gamacros-gamepad/Cargo.toml
@@ -20,3 +20,4 @@ sdl2 = { workspace = true }
 crossbeam-channel = { workspace = true }
 gamacros-bit-derive = { workspace = true }
 gamacros-bit-mask = { workspace = true }
+ahash = { workspace = true }
