refactor: migrate macros to smallvec

--- a/crates/gamacros-workspace/Cargo.toml
+++ b/crates/gamacros-workspace/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_yaml = { workspace = true }
 ahash = { workspace = true, features = ["serde"] }
+smallvec = { workspace = true }
 notify = { workspace = true }
 notify-debouncer-mini = { workspace = true }
 
