--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,8 +44,9 @@ sdl2 = "0.37"
 # Keyboard bindings
 enigo = "0.6.0"
 
-# Fast hashmaps
+# Fast data types
 ahash = "0.8"
+smallvec = "1.15"
 
 # Concurrent channels
 crossbeam-channel = "0.5"
