--- a/crates/gamacrosd/Cargo.toml
+++ b/crates/gamacrosd/Cargo.toml
@@ -25,10 +25,11 @@ thiserror = { workspace = true }
 chrono = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 lunchctl = { workspace = true }
-log = "0.4.26"
-colored = "3.0.0"
-fern = "0.6.1"
-ahash = "0.8"
+log = { workspace = true }
+colored = { workspace = true }
+fern = { workspace = true }
+ahash = { workspace = true }
+smallvec = { workspace = true }
 bitcode = "0.6.7"
 
 [target.'cfg(target_os = "macos")'.dependencies]
